Renamed and improved BayesDistribution into JointByConditioningDistribution
Thanks to a new formula for the CDF, computeCDF() is now way faster and much more accurate when the range of the conditioned distribution changes with the conditioning value.

--- a/lib/src/Uncertainty/Distribution/CMakeLists.txt
+++ b/lib/src/Uncertainty/Distribution/CMakeLists.txt
@@ -8,7 +8,6 @@ ot_add_source_file (AliMikhailHaqCopulaFactory.cxx)
 ot_add_source_file (Arcsine.cxx)
 ot_add_source_file (ArcsineFactory.cxx)
 ot_add_source_file (ArcsineMuSigma.cxx)
-ot_add_source_file (BayesDistribution.cxx)
 ot_add_source_file (Bernoulli.cxx)
 ot_add_source_file (BernoulliFactory.cxx)
 ot_add_source_file (BernsteinCopulaFactory.cxx)
@@ -17,6 +16,7 @@ ot_add_source_file (BetaFactory.cxx)
 ot_add_source_file (BetaMuSigma.cxx)
 ot_add_source_file (Binomial.cxx)
 ot_add_source_file (BinomialFactory.cxx)
+ot_add_source_file (BlockIndependentCopula.cxx)
 ot_add_source_file (BlockIndependentDistribution.cxx)
 ot_add_source_file (Burr.cxx)
 ot_add_source_file (BurrFactory.cxx)
@@ -26,8 +26,6 @@ ot_add_source_file (ChiSquare.cxx)
 ot_add_source_file (ChiSquareFactory.cxx)
 ot_add_source_file (ClaytonCopula.cxx)
 ot_add_source_file (ClaytonCopulaFactory.cxx)
-ot_add_source_file (BlockIndependentCopula.cxx)
-ot_add_source_file (JointDistribution.cxx)
 ot_add_source_file (CompositeDistribution.cxx)
 ot_add_source_file (ConditionalDistribution.cxx)
 ot_add_source_file (CumulativeDistributionNetwork.cxx)
@@ -83,6 +81,8 @@ ot_add_source_file (InverseGamma.cxx)
 ot_add_source_file (InverseNormal.cxx)
 ot_add_source_file (InverseNormalFactory.cxx)
 ot_add_source_file (InverseWishart.cxx)
+ot_add_source_file (JointByConditioningDistribution.cxx)
+ot_add_source_file (JointDistribution.cxx)
 ot_add_source_file (KFactorFunctions.cxx)
 ot_add_source_file (KPermutationsDistribution.cxx)
 ot_add_source_file (KernelMixture.cxx)
@@ -188,7 +188,6 @@ ot_install_header_file (AliMikhailHaqCopulaFactory.hxx)
 ot_install_header_file (Arcsine.hxx)
 ot_install_header_file (ArcsineFactory.hxx)
 ot_install_header_file (ArcsineMuSigma.hxx)
-ot_install_header_file (BayesDistribution.hxx)
 ot_install_header_file (Bernoulli.hxx)
 ot_install_header_file (BernoulliFactory.hxx)
 ot_install_header_file (BernsteinCopulaFactory.hxx)
@@ -197,6 +196,7 @@ ot_install_header_file (BetaFactory.hxx)
 ot_install_header_file (BetaMuSigma.hxx)
 ot_install_header_file (Binomial.hxx)
 ot_install_header_file (BinomialFactory.hxx)
+ot_install_header_file (BlockIndependentCopula.hxx)
 ot_install_header_file (BlockIndependentDistribution.hxx)
 ot_install_header_file (Burr.hxx)
 ot_install_header_file (BurrFactory.hxx)
@@ -206,8 +206,6 @@ ot_install_header_file (ChiSquare.hxx)
 ot_install_header_file (ChiSquareFactory.hxx)
 ot_install_header_file (ClaytonCopula.hxx)
 ot_install_header_file (ClaytonCopulaFactory.hxx)
-ot_install_header_file (BlockIndependentCopula.hxx)
-ot_install_header_file (JointDistribution.hxx)
 ot_install_header_file (CompositeDistribution.hxx)
 ot_install_header_file (ConditionalDistribution.hxx)
 ot_install_header_file (CumulativeDistributionNetwork.hxx)
@@ -263,6 +261,8 @@ ot_install_header_file (InverseGamma.hxx)
 ot_install_header_file (InverseNormal.hxx)
 ot_install_header_file (InverseNormalFactory.hxx)
 ot_install_header_file (InverseWishart.hxx)
+ot_install_header_file (JointByConditioningDistribution.hxx)
+ot_install_header_file (JointDistribution.hxx)
 ot_install_header_file (KFactorFunctions.hxx)
 ot_install_header_file (KPermutationsDistribution.hxx)
 ot_install_header_file (KernelMixture.hxx)
