--- a/python/src/LinearModelValidation_doc.i.in
+++ b/python/src/LinearModelValidation_doc.i.in
@@ -74,6 +74,7 @@ Create a linear model.
 
 >>> import openturns as ot
 >>> import openturns.experimental as otexp
+>>> ot.RandomGenerator.SetSeed(0)
 >>> func = ot.SymbolicFunction(
 ...     ['x1', 'x2', 'x3'],
 ...     ['x1 + x2 + sin(x2 * 2 * pi_) / 5 + 1e-3 * x3^2']
