--- a/lib/etc/openturns.conf.in
+++ b/lib/etc/openturns.conf.in
@@ -484,10 +484,10 @@
   <BurrFactory-ResidualPrecision value_float="1e-12"        />
   <BurrFactory-MaximumIteration  value_int="10" />
   
-  <!-- OT::ConditionalDistribution parameters -->
-  <ConditionalDistribution-MarginalIntegrationNodesNumber value_int="256"          />
-  <ConditionalDistribution-MaximumIntegrationNodesNumber  value_int="100000"       />
-  <ConditionalDistribution-ContinuousDiscretizationMethod value_str="GaussProduct" />
+  <!-- OT::DeconditionedDistribution parameters -->
+  <DeconditionedDistribution-MarginalIntegrationNodesNumber value_int="256"          />
+  <DeconditionedDistribution-MaximumIntegrationNodesNumber  value_int="100000"       />
+  <DeconditionedDistribution-ContinuousDiscretizationMethod value_str="GaussProduct" />
 
   <!-- OT::JointDistribution parameters -->
   <JointDistribution-UseGenericCovarianceAlgorithm value_bool="false" />
