--- a/python/src/GeneralLinearModelAlgorithm_doc.i.in
+++ b/python/src/GeneralLinearModelAlgorithm_doc.i.in
@@ -8,7 +8,7 @@ Available constructors:
 
 Parameters
 ----------
-inputSample, outputSample : :class:`~openturns.Sample` or 2d-array
+inputSample, outputSample : 2-d sequence of float
     The samples :math:`(\vect{x}_k)_{1 \leq k \leq \sampleSize} \in \Rset^\inputDim` and
     :math:`(\vect{y}_k)_{1 \leq k \leq \sampleSize}\in \Rset^\outputDim`.
 
