--- a/python/src/FunctionalChaosAlgorithm_doc.i.in
+++ b/python/src/FunctionalChaosAlgorithm_doc.i.in
@@ -90,7 +90,7 @@ Create the model:
 >>> ot.RandomGenerator.SetSeed(0)
 >>> inputDimension = 1
 >>> model = ot.SymbolicFunction(['x'], ['x * sin(x)'])
->>> distribution = ot.ComposedDistribution([ot.Uniform()] * inputDimension)
+>>> distribution = ot.JointDistribution([ot.Uniform()] * inputDimension)
 
 Build the multivariate orthonormal basis:
 
