Renamed NegativeBinomial in favor of Polya. Fixes #2708

--- a/lib/test/CMakeLists.txt
+++ b/lib/test/CMakeLists.txt
@@ -411,7 +411,7 @@ ot_check_test (MixedHistogramUserDefined_std)
 ot_check_test (Mixture_std)
 ot_check_test (Multinomial_std)
 ot_check_test (MultinomialFactory_std)
-ot_check_test (NegativeBinomial_std)
+ot_check_test (Polya_std)
 ot_check_test (NegativeBinomialFactory_std)
 ot_check_test (NonCentralChiSquare_std)
 if (Boost_FOUND)
