--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -520,7 +520,7 @@ ot_pyinstallcheck_test (MixedHistogramUserDefined_std)
 ot_pyinstallcheck_test (Mixture_std)
 ot_pyinstallcheck_test (Multinomial_std)
 ot_pyinstallcheck_test (MultinomialFactory_std)
-ot_pyinstallcheck_test (NegativeBinomial_std)
+ot_pyinstallcheck_test (Polya_std)
 ot_pyinstallcheck_test (NegativeBinomialFactory_std)
 ot_pyinstallcheck_test (NonCentralChiSquare_std)
 if (Boost_FOUND)
