--- a/lib/src/Uncertainty/Distribution/CMakeLists.txt
+++ b/lib/src/Uncertainty/Distribution/CMakeLists.txt
@@ -118,7 +118,7 @@ ot_add_source_file (MixedHistogramUserDefined.cxx)
 ot_add_source_file (Mixture.cxx)
 ot_add_source_file (Multinomial.cxx)
 ot_add_source_file (MultinomialFactory.cxx)
-ot_add_source_file (NegativeBinomial.cxx)
+ot_add_source_file (Polya.cxx)
 ot_add_source_file (NegativeBinomialFactory.cxx)
 ot_add_source_file (NonCentralChiSquare.cxx)
 ot_add_source_file (NonCentralStudent.cxx)
@@ -293,7 +293,7 @@ ot_install_header_file (MixedHistogramUserDefined.hxx)
 ot_install_header_file (Mixture.hxx)
 ot_install_header_file (MultinomialFactory.hxx)
 ot_install_header_file (Multinomial.hxx)
-ot_install_header_file (NegativeBinomial.hxx)
+ot_install_header_file (Polya.hxx)
 ot_install_header_file (NegativeBinomialFactory.hxx)
 ot_install_header_file (NonCentralChiSquare.hxx)
 ot_install_header_file (NonCentralStudent.hxx)
