New OrthogonalProduct*Factory.getMarginal()

--- a/lib/test/CMakeLists.txt
+++ b/lib/test/CMakeLists.txt
@@ -647,6 +647,7 @@ ot_check_test (LinearModelAnalysis_std)
 ot_check_test (LinearModelValidation_std IGNOREOUT)
 ot_check_test (KrigingAlgorithm_isotropic_std IGNOREOUT)
 ot_check_test (OrthogonalProductPolynomialFactory_std)
+ot_check_test (OrthogonalProductFunctionFactory_std)
 
 if (HMAT_FOUND)
 ot_check_test (KrigingAlgorithm_std_hmat)
