--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -713,6 +713,7 @@ ot_pyinstallcheck_test (OrthogonalUniVariatePolynomialFunctionFactory_std)
 ot_pyinstallcheck_test (FourierSeriesFactory_std)
 ot_pyinstallcheck_test (HaarWaveletFactory_std)
 ot_pyinstallcheck_test (OrthogonalProductPolynomialFactory_std)
+ot_pyinstallcheck_test (OrthogonalProductFunctionFactory_std)
 
 ## Algorithm
 ot_pyinstallcheck_test (TaylorExpansionMoments_std)
