--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     - uses: actions/checkout@v4
     - run: |
         brew install openblas swig boost python3 tbb nlopt cminpack ceres-solver bison flex hdf5 ipopt primesieve spectra pagmo cuba nanoflann
-        pip3 install matplotlib scipy chaospy pandas dill --break-system-packages
+        pip3 install matplotlib "numpy<2" scipy chaospy pandas dill --break-system-packages
     - run: |
         cmake \
         -DCMAKE_INSTALL_PREFIX=~/.local \
